--- a/client/package.json
+++ b/client/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
-    "@apollo/client": "^3.7.1",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@apollo/client": "^3.3.16",
+    "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^13.5.0",
-    "graphql": "^16.6.0",
+    "@testing-library/user-event": "^12.1.10",
+    "graphql": "^15.5.0",
+    "kill-port": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
