--- a/client/package.json
+++ b/client/package.json
@@ -2,13 +2,14 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://localhost:59170/",
   "dependencies": {
     "@apollo/client": "^3.3.16",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "graphql": "^15.5.0",
+    "jwt-decode": "^3.1.2",
     "kill-port": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
